Add note about informality

--- a/thesis/effects_in_theory.tex
+++ b/thesis/effects_in_theory.tex
@@ -1,7 +1,9 @@
 
 \chapter{O efektach algebraicznych teoretycznie}
 
-Wprowadzimy notację służącą opisowi prostych obliczeń, która pomoże nam -- bez zanurzania się głęboko w ich rodowód matematyczny -- zrozumieć jak prostym, a jednocześnie fascynującym tworem są efekty algebraiczne i uchwyty. Następnie przyjrzymy się, jak możemy zapisać popularne przykłady efektów ubocznych używając naszej notacji. Na koniec, czytelnikowi zostaną polecone zasoby do dalszej lektury, które rozszerzają opis z tego rozdziału.
+Wprowadzimy notację służącą opisowi prostych obliczeń, która pomoże nam -- bez zanurzania się głęboko w ich rodowód matematyczny -- zrozumieć jak prostym, a jednocześnie fascynującym tworem są efekty algebraiczne i uchwyty. Przedstawiona notacja jest intencjonalnie nieformalna, gdyż ma w dostępny sposób przedstawić abstrakcyjny opis obliczeń z efektami bez prezentowania konkretnego języka programowania.
+
+Następnie przyjrzymy się, jak możemy zapisać popularne przykłady efektów ubocznych używając naszej notacji. Na koniec, czytelnikowi zostaną polecone zasoby do dalszej lektury, które rozszerzają opis z tego rozdziału.
 
 \section{Notacja}
 
