Add title macro and mention chain

--- a/thesis/build_systems_a_la_carte.tex
+++ b/thesis/build_systems_a_la_carte.tex
@@ -2,8 +2,9 @@
 \newcommand{\inl}[1]{\lstinline[style=haskell-inl]{#1}}
 
 \chapter{O systemach kompilacji (i ich klasyfikacji)}
+\label{chapter-bsalc}
 
-Systemy kompilacji, choć są wykorzystywane w praktycznie wszystkich projektach programistycznych, są przez ich użytkowników na ogół zaniedbywane, traktowane jak zło konieczne, a czasem nawet wywołują lęk oraz złość. Mimo tak dużej popularności i większym~--~niż mogłoby się wydawać~--~stopniowi skomplikowania, nie cieszyły się specjalnym zainteresowaniem ze strony badaczy. Przyglądnęli się im jednak bliżej Andrey Mokhov, Neil Mitchell oraz Simon Peyton Jones w artykułach ,,Build systems {\`a} la carte''\cite{mokhov2018build} oraz ,,Build systems {\`a} la carte: Theory and practice''\cite{mokhov2020build}. W tym rozdziale prześledzimy ich kroki i omówimy wyniki które otrzymali autorzy aby w dalszej części tej pracy samodzielnie zaimplementować przedstawione systemy kompilacji w języku z efektami algebraicznymi oraz uchwytami.
+Systemy kompilacji, choć są wykorzystywane w praktycznie wszystkich projektach programistycznych, są przez ich użytkowników na ogół zaniedbywane, traktowane jak zło konieczne, a czasem nawet wywołują lęk oraz złość. Mimo tak dużej popularności i większym~--~niż mogłoby się wydawać~--~stopniowi skomplikowania, nie cieszyły się specjalnym zainteresowaniem ze strony badaczy. Przyglądnęli się im jednak bliżej Andrey Mokhov, Neil Mitchell oraz Simon Peyton Jones w artykułach \BSaLC\cite{mokhov2018build} oraz \BSaLCTP\cite{mokhov2020build}. W tym rozdziale prześledzimy ich kroki i omówimy wyniki które otrzymali autorzy aby w dalszej części tej pracy samodzielnie zaimplementować przedstawione systemy kompilacji w języku z efektami algebraicznymi oraz uchwytami.
 
 \section{Przykłady systemów kompilacji}
 
@@ -53,7 +54,7 @@ Rozważmy teraz przykład arkusza kalkulacyjnego przedstawiony przez autorów or
 
 Funkcja INDIRECT dynamicznie określa, z której komórki zostanie pobrana wartość, a operator \(\&\) jest składaniem napisów. Gdy C1 = 1, wartością komórki B1 będzie wartość A1, zaś gdy C1 = 2, wartość zostanie pobrana z A2. Jak widzimy, komórki których wartości są wykorzystywane do obliczenia B1 zależą od wartości C1. W tej sytuacji mówimy o dynamicznych zależnościach między komórkami (a ogólniej, w kontekście systemów kompilacji -- zadaniami). Tutaj mamy tylko jeden stopień pośredniości, bo zależności B1 są determinowane przez wejście C1. Ogólniej, stopień pośredniości może być dowolnie duży. W takiej sytuacji, mechanizm z sortowaniem topologicznym wykorzystywany w Make'u nie będzie właściwy, gdyż nie możemy a priori -- bez spoglądnięcia na stany innych komórek -- ustalić właściwego porządku budowania zadań.
 
-Porządkowanie komórek w procesie ich obliczania jest w Excelu trochę bardziej skomplikowane. Mechanizm utrzymuje komórki w ciągu. W procesie budowania, Excel oblicza wartości komórek zgodnie ze skonstruowanym ciągiem. W sytuacji gdy komórka A potrzebuje wyniku innej, jeszcze nie obliczonej komórki N, Excel dokonuje restartu -- przerywa obliczanie A i przesuwa N przed A w ciągu oraz wznawia obliczanie wartości zaczynając od N. Po zakończeniu budowania, otrzymany ciąg komórek ma taką własność, że ponowne budowanie przy niezmienionych wejściach odbędzie się bez restartów. Ciąg pełni funkcję aproksymacji właściwego porządku obliczania komórek. Chcąc określić które komórki muszą być obliczone ponownie, Excel dla każdej komórki utrzymuje informację czy jest ona brudna. Komórki stają się brudne, gdy:
+Porządkowanie komórek w procesie ich obliczania jest w Excelu trochę bardziej skomplikowane. Mechanizm utrzymuje komórki w ciągu (zwanym łańcuchem). W procesie budowania, Excel oblicza wartości komórek zgodnie ze skonstruowanym ciągiem. W sytuacji gdy komórka A potrzebuje wyniku innej, jeszcze nie obliczonej komórki N, Excel dokonuje restartu -- przerywa obliczanie A i przesuwa N przed A w ciągu oraz wznawia obliczanie wartości zaczynając od N. Po zakończeniu budowania, otrzymany ciąg komórek ma taką własność, że ponowne budowanie przy niezmienionych wejściach odbędzie się bez restartów. Ciąg pełni funkcję aproksymacji właściwego porządku obliczania komórek. Chcąc określić które komórki muszą być obliczone ponownie, Excel dla każdej komórki utrzymuje informację czy jest ona brudna. Komórki stają się brudne, gdy:
 \begin{itemize}
 \item są wejściem i ich wartość zostanie zmieniona,
 \item ich formuła zostanie zmieniona,
@@ -292,4 +293,4 @@ Głębokie okruszki konstruktywne & Buck         & -            & Nix \\
 
 \section{Implementowanie systemów}
 
-Mając już ustaloną klasyfikację oraz definicje abstrakcyjnych konstrukcji i typów w Haskellu, można zaimplementować planistów i rekompilatorów. Wtedy utworzenie implementacji znanych systemów kompilacji (a nawet tych, które dotychczas były tylko pustymi polami w tabeli) jest zwykłym zaaplikowanie rebuildera do schedulera. Wszystkie implementacje przedstawione przez autorów ,,Build systems {\`a} la carte'' są dostępne w tekstach artykułów \cite{mokhov2018build, mokhov2020build} oraz w repozytorium\footnote{\url{https://github.com/snowleopard/build}} w serwisie GitHub. W rozdziale 5 zobaczymy, jak implementacja takich systemów wygląda w języku z efektami algebraicznymi i uchwytami.
+Mając już ustaloną klasyfikację oraz definicje abstrakcyjnych konstrukcji i typów w Haskellu, można zaimplementować planistów i rekompilatorów. Wtedy utworzenie implementacji znanych systemów kompilacji (a nawet tych, które dotychczas były tylko pustymi polami w tabeli) jest zwykłym zaaplikowanie rebuildera do schedulera. Wszystkie implementacje przedstawione przez autorów \BSaLC{} są dostępne w tekstach artykułów \cite{mokhov2018build, mokhov2020build} oraz w repozytorium\footnote{\url{https://github.com/snowleopard/build}} w serwisie GitHub. W rozdziale 5 zobaczymy, jak implementacja takich systemów wygląda w języku z efektami algebraicznymi i uchwytami.
