--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -18,14 +18,16 @@ Nowym, konkurencyjnym podejściem do ujarzmienia efektów ubocznych przez wykorz
 
 Przykładem programów, których głównym zadaniem jest interakcja z zewnętrznymi zasobami są systemy kompilacji, w których użytkownik opisuje proces wytwarzania wyniku jako zbiór wzajemnie-zależnych zadań wraz z informacją jak mają być one wykonywane w oparciu o wyniki innych zadań, zaś system jest odpowiedzialny za ich poprawne uporządkowanie i wykonanie. Ponadto, od systemu kompilacji oczekujemy, że będzie śledził zmiany w danych wejściowych i -- gdy poproszony o aktualizację wyników -- obliczał ponownie jedynie zadania, których wartości ulegną zmianie. Przykładami systemów kompilacji są Make oraz -- co może wydawać się zaskakujące -- programy biurowe służące do edycji arkuszy kalkulacyjnych (np. popularny Excel).
 
-W publikacjach pod tytułem ,,Build systems {\`a} la carte'' \cite{mokhov2018build, mokhov2020build}, autorzy przedstawiają sposób klasyfikacji systemów kompilacji w oparciu o to jak determinują one kolejność w jakiej zadania zostaną obliczone oraz jak wyznaczają, które z zadań wymagają ponownego obliczenia. Uzyskana klasyfikacja prowadzi autorów do skonstruowania platformy umożliwiającej definiowanie systemów kompilacji o oczekiwanych właściwościach. Platforma ta okazuje się być łatwa w implementacji w języku Haskell, a klasy typów Applicative oraz Monad odpowiadać mocy języka opisywania zależności między zadaniami do obliczenia.
+W publikacjach pod tytułem \BSaLC{} \cite{mokhov2018build, mokhov2020build}, autorzy przedstawiają sposób klasyfikacji systemów kompilacji w oparciu o to jak determinują one kolejność w jakiej zadania zostaną obliczone oraz jak wyznaczają, które z zadań wymagają ponownego obliczenia. Uzyskana klasyfikacja prowadzi autorów do skonstruowania platformy umożliwiającej definiowanie systemów kompilacji o oczekiwanych właściwościach. Platforma ta okazuje się być łatwa w implementacji w języku Haskell, a klasy typów Applicative oraz Monad odpowiadać mocy języka opisywania zależności między zadaniami do obliczenia.
 
 \section{O tej pracy}
 
 Celem tej pracy jest zapoznanie czytelnika, który miał dotychczas kontakt z językiem Haskell oraz podstawami języków funkcyjny, z nowatorskim rozwiązaniem jakim są efekty algebraiczne oraz zademonstrowanie -- idąc śladami Mokhov'a i innych \cite{mokhov2018build, mokhov2020build} -- implementacji systemów kompilacji z wykorzystaniem efektów algebraicznych i uchwytów w języku programowania Helium. Jak się okazuje, wykorzystanie tych narzędzi daje schludną implementację ale prowadzi także do problemów w implementacji systemów o pewnym sposobie determinowania zależności między zadaniami.
 
-W rozdziale drugim wprowadzony zostaje prosty model obliczeń wykorzystujący efekty algebraiczne i uchwyty. Zostaje przedstawionych kilka przykładów reprezentacji standardowych efektów ubocznych w opisanym modelu.
+W rozdziale drugim wprowadzony zostaje prosty i nieformalny model obliczeń wykorzystujący efekty algebraiczne i uchwyty. Zostaje przedstawionych kilka przykładów reprezentacji standardowych efektów ubocznych w opisanym modelu.
 
-Celem rozdziału trzeciego jest wprowadzenie do ,,Build systems {\`a} la carte'', opisanie obserwacji poczynionych przez autorów i przedstawienie abstrakcji systemów kompilacji oraz ich konsekwencji. Treść źródłowego artykułu jest opisana w sposób dostateczny aby zrozumieć implementacje systemów z wykorzystaniem efektów i uchwytów przedstawione w rozdziale piątym. Czytelnik jest gorąco zachęcany do samodzielnego zapoznania się z całą treścią publikacji Mokhov'a i innych gdyż jest to bardzo dobra i łatwa w konsumpcji lektura.
+Celem rozdziału trzeciego jest wprowadzenie do \BSaLC{}, opisanie obserwacji poczynionych przez autorów i przedstawienie abstrakcji systemów kompilacji oraz ich konsekwencji. Treść źródłowego artykułu jest opisana w sposób dostateczny aby zrozumieć implementacje systemów z wykorzystaniem efektów i uchwytów przedstawione w rozdziale piątym. Czytelnik jest gorąco zachęcany do samodzielnego zapoznania się z całą treścią publikacji Mokhov'a i innych gdyż jest to bardzo dobra i łatwa w konsumpcji lektura.
 
 Rozdział czwarty rozpoczyna się zapoznaniem czytelnika z istniejącymi językami oraz bibliotekami umożliwiającymi programowanie z efektami i uchwytami. Następnie omówiony jest język Helium oraz przykładowe problemy, wraz z programami je rozwiązującymi z użyciem efektów i uchwytów. Zademonstrowana jest ponadto łatwość wykorzystywania wielu efektów jednocześnie -- w bardziej przystępnej formie niż w przypadku monad w Haskellu.
+
+Zwieńczeniem pracy jest rozdział piąty, w którym przedstawiona jest implementacja planistów, rekompilatorów oraz systemów kompilacji w sposób inspirowany wynikiami \BSaLC{}, jednak używając języka z efektami algebraicznymi i uchwytami. Przedstawione są różnice między abstrakcyjnymi typami od których wyprowadza się implementację oraz w jaki sposób efekty i uchwyty wpływają na formę wyniku. Ponadto, pominięta zostaje implementacja jednego z planistów z wytłumaczeniem dlaczego ma to miejsce.
